<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="*"
    android:stretchColumns="*" >

    <TableRow
        android:id="@+id/tableRow0"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/text_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:layout_span="4" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/text_row_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_row_num"
            android:gravity="right"
            android:layout_span="1" />
        <EditText
            android:id="@+id/edit_row_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:focusable="false"
            android:layout_span="3" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/text_row_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_row_city"
            android:gravity="right"
            android:layout_span="1" />
        <EditText
            android:id="@+id/edit_row_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:focusable="false"
            android:layout_span="3" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/text_row_restaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_row_restaurant"
            android:gravity="right"
            android:layout_span="1" />
        <EditText
            android:id="@+id/edit_row_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:focusable="false"
            android:layout_span="3" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/text_row_attraction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_row_attraction"
            android:gravity="right"
            android:layout_span="1" />
        <EditText
            android:id="@+id/edit_row_attraction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:focusable="false"
            android:layout_span="3" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/text_row_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_row_food"
            android:gravity="right"
            android:layout_span="1" />
        <EditText
            android:id="@+id/edit_row_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:focusable="false"
            android:layout_span="3" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/but_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_first"
            android:onClick="gotoFirst" />
        <Button
            android:id="@+id/but_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_next"
            android:onClick="gotoNext" />
        <Button
            android:id="@+id/but_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_previous"
            android:onClick="gotoPrevious" />
        <Button
            android:id="@+id/but_last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_last"
            android:onClick="gotoLast" />
    </TableRow>

</TableLayout>